fix: ensure draggable actions are visible above next component
Would sometimes get stuck beneath if the component was particularly narrow.

--- a/packages/core/DraggableComponent/styles.module.css
+++ b/packages/core/DraggableComponent/styles.module.css
@@ -1,11 +1,9 @@
 .DraggableComponent {
   position: relative;
-  z-index: 0;
 }
 
 .DraggableComponent-contents {
   position: relative; /* Reset stacking context */
-  z-index: -1;
 }
 
 .DraggableComponent-overlay {
